tests/paczka1/fuzzy1/10707683.err
Error in line 15: 3MosBO3BtOu S80 38,05
Error in line 18: RiBn0MVkY S176 61,85
Error in line 20: bJZ7nP9 S839 60,4
Error in line 13: 3MosBO3BtOu S80 41,0
